2020-02-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: When building the list of hosts to be probed to see
	if they have gdomap servers, fix code to include those explicitly
	defined in the config file.  Add -S option to list the addresses of
	the known gdomap servers.
	* Tools/gdomap.8: Document the new command line option.

2020-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSXPCConnection.h: remove unistd.h since
	workaround broke blocks code.  I guess we have to hope that
	sys/types.h has gid_t, pid_t, and uid_t on all systems we target.

2020-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Examples/dictionary.m:
	* Examples/nsconnection_client.m:
	* Headers/GNUstepBase/GNUstep.h:
	* Source/Additions/GSMime.m:
	* Source/NSConnection.m:
	* Source/NSDictionary.m:
	* Source/NSException.m:
	* Source/NSFileManager.m:
	* Source/NSFileWrapper.m:
	* Source/NSTask.m:
	* Source/NSUserDefaults.m:
	* Tools/AGSIndex.m:
	* Tools/AGSOutput.m:
	* Tools/cvtenc.m:
	Switch various places away from deprecated CREATE_AUTORELEASE_POOL()
	to use the ARC-compatible ENTER_POOL and LEAVE_POOL macros.

2020-02-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSXPCConnection.h: Workaround for clash between
	unistd.h and clang's reserved word __block

2020-02-05  Fred Kiefer <fredkiefer@gmx.de>

	* configure.ac: Use pkg-config to check for libxml.
	* configure: regenerate

2020-01-23  Fred Kiefer <fredkiefer@gmx.de>

	* Source/Additions/NSURL+GNUstepBase.m: Handle case where scheme
	is missing from the URL.

2020-01-20  Fred Kiefer <fredkiefer@gmx.de>

	* Source/NSPredicate.m: Allow simple predicates on NSDate.

2020-01-20  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: remove certificate key password from hash key of
	credentials since it's unnecessary there and we don't want it to be
	logged when debug is on (for security, passwords shouldn't appear
	in logs).

2020-01-12  Fred Kiefer <fredkiefer@gmx.de>
